--- a/images.html
+++ b/images.html
@@ -1,21 +1,17 @@
-<!-- Load TensorFlow.js. This is required to use MobileNet. -->
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"> </script>
-<!-- Load the MobileNet model. -->
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
 
-<!-- Replace this with your image. Make sure CORS settings allow reading the image! -->
+<p>(Open the developer console to see predictions)</p>
 <img id="img" src="http://127.0.0.1:8080/cat.jpeg"></img>
 
-<!-- Place your code in the script tag below. You can also use an external .js file -->
-<script>
-  // Notice there is no 'import' statement. 'mobilenet' and 'tf' is
-  // available on the index-page because of the script tag above.
 
+<script>
+  console.log("Loading model...")
   const img = document.getElementById('img');
 
-  // Load the model.
   mobilenet.load().then(model => {
-    // Classify the image.
     model.classify(img).then(predictions => {
       console.log('Predictions: ');
       console.log(predictions);
